--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,13 @@
 @import url(./components/global.css);
 @import url(./components/carousel.css);
 
+.carre { 
+    height: 150px;
+    width: 150px;
+    background-color: red;
+    border: 5px solid blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+}
